--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\scripts\card scripts\deck scripts\removeFromDeck.cs" />
     <Compile Include="Assets\scripts\card scripts\shop scripts\disableCharCards.cs" />
     <Compile Include="Assets\scripts\card scripts\cardSupport.cs" />
+    <Compile Include="Assets\scripts\dataManager.cs" />
     <Compile Include="Assets\scripts\menuScripts\setActive.cs" />
     <Compile Include="Assets\scripts\menuScripts\onHover.cs" />
     <Compile Include="Assets\scripts\card scripts\respawnUserCards.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Assets\scripts\PlayerManager1.cs" />
     <Compile Include="Assets\scripts\enums.cs" />
     <Compile Include="Assets\scripts\card scripts\alWindowOpen.cs" />
+    <Compile Include="Assets\scripts\PlayerData.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\PlayerTurn.cs" />
     <Compile Include="Assets\scripts\gameScripts\healthBar.cs" />
     <Compile Include="Assets\scripts\gameScripts\cameraRotation.cs" />
@@ -91,8 +93,8 @@
     <Compile Include="Assets\scripts\gameScripts\states\Lost.cs" />
     <Compile Include="Assets\scripts\gameScripts\battle field\Field.cs" />
     <Compile Include="Assets\scripts\card scripts\filter scripts\setRace.cs" />
-    <Compile Include="Assets\scripts\PlayerData.cs" />
-    <Compile Include="Assets\scripts\dataManager.cs" />
+    <Compile Include="Assets\scripts\gameScripts\character.cs" />
+    <Compile Include="Assets\scripts\gameScripts\cardCharHolde.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\packages\Room\Settings\Note.txt" />
