--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,17 +60,24 @@
     <Compile Include="Assets\scripts\gameScripts\BillBoard.cs" />
     <Compile Include="Assets\scripts\card scripts\deck scripts\addToDeck.cs" />
     <Compile Include="Assets\scripts\card scripts\cardSupportDisplay.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\EnemyAI\EnemyBT.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\Tree.cs" />
     <Compile Include="Assets\scripts\card scripts\shop scripts\buyCard.cs" />
     <Compile Include="Assets\scripts\card scripts\CardDisplay.cs" />
     <Compile Include="Assets\scripts\card scripts\deck scripts\removeFromDeck.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\Node.cs" />
     <Compile Include="Assets\scripts\card scripts\shop scripts\disableCharCards.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\EnemyAI\Movement.cs" />
     <Compile Include="Assets\scripts\gameScripts\cardCharHolde.cs" />
     <Compile Include="Assets\scripts\card scripts\cardSupport.cs" />
     <Compile Include="Assets\scripts\dataManager.cs" />
     <Compile Include="Assets\scripts\menuScripts\setActive.cs" />
     <Compile Include="Assets\scripts\menuScripts\onHover.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\EnemyAI\ChooseChar.cs" />
     <Compile Include="Assets\scripts\card scripts\respawnUserCards.cs" />
+    <Compile Include="Assets\scripts\gameScripts\SupportCardHolder.cs" />
     <Compile Include="Assets\scripts\card scripts\cardSpawner.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\EnemyAI\Attack.cs" />
     <Compile Include="Assets\scripts\card scripts\shop scripts\turnOnCards.cs" />
     <Compile Include="Assets\scripts\PlayerManager1.cs" />
     <Compile Include="Assets\scripts\enums.cs" />
@@ -81,23 +88,27 @@
     <Compile Include="Assets\scripts\gameScripts\cameraRotation.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\StateMachine.cs" />
     <Compile Include="Assets\scripts\menuScripts\menu.cs" />
+    <Compile Include="Assets\abilities\ability.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\EnemyTurn.cs" />
     <Compile Include="Assets\scripts\card scripts\filter scripts\setSupportType.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\EnemyAI\checkCellsForMove.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\Won.cs" />
     <Compile Include="Assets\scripts\card scripts\filter scripts\setCardClass.cs" />
     <Compile Include="Assets\scripts\card scripts\filter scripts\cardFilter.cs" />
     <Compile Include="Assets\scripts\gameScripts\character.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\Selector.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\BattleSystem.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\Begin.cs" />
     <Compile Include="Assets\scripts\card scripts\Card.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\State.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\EnemyAI\checkCellsForAttack.cs" />
     <Compile Include="Assets\scripts\gameScripts\battle field\Cell.cs" />
     <Compile Include="Assets\scripts\card scripts\shop scripts\setCoordTo0.cs" />
+    <Compile Include="Assets\scripts\gameScripts\behaviourTree\Sequence.cs" />
     <Compile Include="Assets\scripts\gameScripts\states\Lost.cs" />
     <Compile Include="Assets\scripts\gameScripts\battle field\Field.cs" />
     <Compile Include="Assets\scripts\gameScripts\materialPicker.cs" />
     <Compile Include="Assets\scripts\card scripts\filter scripts\setRace.cs" />
-    <Compile Include="Assets\SupportCardHolder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
